hard-gists/5145500/run.log
=== Docker Run Log for 5145500 ===
Started at: Mi 29. Okt 15:24:12 CET 2025

[2025-10-29 15:24:12] START: Running container for 5145500
[2025-10-29 15:24:13] SUCCESS: Container 7678bde5fa0e3d96fbb7d35fe45fe4c19aeb4a11c18e147ec724243acdd2236b started for 5145500
=== Container logs for 5145500 ===
  File "/snippet.py", line 70
    print "created new gridfs file {0} with id {1}".format(gridfs_filename, _id)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5145500 ===
[2025-10-29 15:24:15] INFO: Container 7678bde5fa0e3d96fbb7d35fe45fe4c19aeb4a11c18e147ec724243acdd2236b has stopped
